--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@
 !/log/.keep
 /tmp
 /jetty
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
