--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
