Set RAILS_ENV to test for running test

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -25,4 +25,6 @@ jobs:
           ruby-version: 3.3
           bundler-cache: true
       - name: Run tests
+        env:
+          RAILS_ENV: test
         run: bundle exec rake
