--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Run tests
         env:
           RAILS_ENV: test
-        run: bundle exec rake
+        run: bin/rake db:setup ci
