--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SOLR_PORT=8983
 SOLR_URL=http://solr:8983/solr/blacklight-core
 SOLR_VERSION=latest
+DATABASE_URL=mysql2://root:my-secret-pw@mysql/my_database?pool=5
