--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,22 @@
 services:
+  app:
+    build:
+      context: .
+      dockerfile: .docker/app/Dockerfile
+    ports:
+      - "3000:3000"
+    # mounting . is causing seg-fault on macosx
+    #volumes:
+    #- .:/app
+    depends_on:
+      - solr
+      - mysql
+    # command: bundle exec rails server -b 0.0.0.0 -p 3000
+    environment:
+      - SOLR_URL # Set via environment variable or use default defined in .env file
+      - SECRET_KEY_BASE
+      - DATABASE_URL
+
   solr:
     environment:
       - SOLR_PORT # Set via environment variable or use default defined in .env file
@@ -26,3 +44,17 @@ services:
       - /opt/solr/conf
       - "-Xms256m"
       - "-Xmx512m"
+
+  mysql:
+    image: mysql:latest
+    environment:
+      MYSQL_ROOT_PASSWORD: my-secret-pw
+      # uncomment below if you want to automatically create and select a database
+      MYSQL_DATABASE: my_database
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql-data:/var/lib/mysql
+
+volumes:
+  mysql-data:
