Upgrade to blacklight 9.0.0.beta6

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "autoprefixer": "^10.4.20",
-    "blacklight-frontend": "^8.4.0",
+    "blacklight-frontend": "^9.0.0-beta.6",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "nodemon": "^3.1.7",
