Use sqlite rather than mysql

--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,15 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
-
 # Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
 /tmp
 /jetty
+
+# Ignore storage (uploaded files in development and any SQLite databases).
+/storage/*
+!/storage/.keep
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
